# streamgraph

./: .gitignore  CMakeLists.txt
cmake/: BuildDeps.cmake
cpack/: PackageInfo.cmake  postinst.in  prerm.in
examples/: samtools.xml
src/: CMakeLists.txt  FdMapping.cpp  FdMapping.hpp  FdSource.cpp  FdSource.hpp  ProcessManager.cpp  ProcessManager.hpp  ProcessSpec.hpp  TimeUtil.hpp  io.hpp  main.cpp
src/exe/: CMakeLists.txt  fdtee.cpp  main.cpp  pgraph.cpp  streamgraph.cpp
src/lib/process/: CMakeLists.txt  ChildFunction.hpp  ChildProcess.cpp  ChildProcess.hpp  ChildProcessResult.hpp  ExecWrapper.cpp  ExecWrapper.hpp  GraphXml.cpp  GraphXml.hpp  Process.cpp  Process.hpp  ProcessGraph.cpp  ProcessGraph.hpp  ProcessGroup.cpp  ProcessGroup.hpp  ProcessResult.hpp  ProcessXml.hpp  StatusXml.cpp  StatusXml.hpp
src/lib/ui/: App.cpp  App.hpp  CMakeLists.txt  CommandBase.cpp  CommandBase.hpp  FdTeeCommand.cpp  FdTeeCommand.hpp  RunGraphCommand.cpp  RunGraphCommand.hpp
src/lib/utility/: CMakeLists.txt  CStringArrayAdaptor.hpp  FdMapping.cpp  FdMapping.hpp  FdSource.cpp  FdSource.hpp  FdTee.cpp  FdTee.hpp  FdUtil.hpp  TempFile.cpp  TempFile.hpp  io.hpp
test/: CMakeLists.txt  TestCStringArrayAdaptor.cpp  TestConfig.hpp.in  TestFdMapping.cpp  harness.cpp
test/lib/process/: CMakeLists.txt  ProcessIoHelpers.hpp  TestChildProcess.cpp  TestProcess.cpp  TestProcessGraph.cpp  TestProcessGroup.cpp
test/lib/utility/: CMakeLists.txt  TestCStringArrayAdaptor.cpp  TestFdMapping.cpp
